{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 57,
  "lineage": "64bc9078-3a8d-1c46-2abe-7bdb7f684807",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:security-group/sg-03c892283ea908984",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03c892283ea908984",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2023062009070338350000000d",
            "name_prefix": "all_worker_management",
            "owner_id": "088096345438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:security-group/sg-079e43656af616c60",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-079e43656af616c60",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2023062009070308390000000a",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "088096345438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:security-group/sg-0c799da2a106913fe",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c799da2a106913fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20230620090701772800000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "088096345438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx",
                "resource_version": "1051",
                "uid": "d2e1b4ce-31c6-4a60-8587-caff6290fe76"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "nginx/nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx",
                "namespace": "nginx",
                "resource_version": "1743",
                "uid": "3a24d16c-bc08-425e-b329-81e003cddb7a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.33.209",
                "cluster_ips": [
                  "172.20.33.209"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31641,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "MyTestApp"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a3a24d16cbc08425eb32981e003cddb7-1329271490.eu-west-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "kubernetes_deployment.test",
            "kubernetes_namespace.test",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:security-group/sg-08c33d542062e73f9",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-08c33d542062e73f9",
            "ingress": [],
            "name": "sonik-eks-cluster2023062009070326950000000b",
            "name_prefix": "sonik-eks-cluster",
            "owner_id": "088096345438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "DevOps",
              "Name": "sonik-eks-cluster-eks_cluster_sg",
              "Owner": "Nati",
              "Temp": "True"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "sonik-eks-cluster-eks_cluster_sg",
              "Owner": "Nati",
              "Temp": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:security-group/sg-0c0030dd26775b51a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0c0030dd26775b51a",
            "ingress": [],
            "name": "sonik-eks-cluster2023062009070326990000000c",
            "name_prefix": "sonik-eks-cluster",
            "owner_id": "088096345438",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "DevOps",
              "Name": "sonik-eks-cluster-eks_worker_sg",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "owned"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "sonik-eks-cluster-eks_worker_sg",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1513201171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08c33d542062e73f9",
            "security_group_rule_id": "sgr-0a821aed9423a3157",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1277928422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c33d542062e73f9",
            "security_group_rule_id": "sgr-0bddd3d084e61b8ff",
            "self": false,
            "source_security_group_id": "sg-0c0030dd26775b51a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-801881328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c0030dd26775b51a",
            "security_group_rule_id": "sgr-0e43ccec728a6d235",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1223414768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c0030dd26775b51a",
            "security_group_rule_id": "sgr-0618fb6ecf748e7c2",
            "self": false,
            "source_security_group_id": "sg-08c33d542062e73f9",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2807781081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c0030dd26775b51a",
            "security_group_rule_id": "sgr-0e7ae68a3402497c0",
            "self": false,
            "source_security_group_id": "sg-08c33d542062e73f9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1981249411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c0030dd26775b51a",
            "security_group_rule_id": "sgr-021f410217c105cb5",
            "self": false,
            "source_security_group_id": "sg-0c0030dd26775b51a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f390d28da9eb7ce6",
            "domain": "vpc",
            "id": "eipalloc-0f390d28da9eb7ce6",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-19-76-127.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.76.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:internet-gateway/igw-092bc32f92952a8e2",
            "id": "igw-092bc32f92952a8e2",
            "owner_id": "088096345438",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f390d28da9eb7ce6",
            "association_id": "eipassoc-078d8e3436700240c",
            "connectivity_type": "public",
            "id": "nat-0061b2468c9441523",
            "network_interface_id": "eni-0a9dabc9c4ff54b9a",
            "private_ip": "10.0.4.157",
            "public_ip": "52.19.76.127",
            "subnet_id": "subnet-0fbcd55e4fb13d6da",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbaa46bc8c305f101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0061b2468c9441523",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbaa46bc8c305f10",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-092bc32f92952a8e2",
            "id": "r-rtb-081651a19a9e4d46a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081651a19a9e4d46a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:route-table/rtb-0bbaa46bc8c305f10",
            "id": "rtb-0bbaa46bc8c305f10",
            "owner_id": "088096345438",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:route-table/rtb-081651a19a9e4d46a",
            "id": "rtb-081651a19a9e4d46a",
            "owner_id": "088096345438",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000955fa1ecf6b932",
            "route_table_id": "rtb-0bbaa46bc8c305f10",
            "subnet_id": "subnet-0d36b0b04851f4634"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d7f9e129e861181",
            "route_table_id": "rtb-0bbaa46bc8c305f10",
            "subnet_id": "subnet-0b32599fcca405b5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69fbd6c703ca7df",
            "route_table_id": "rtb-0bbaa46bc8c305f10",
            "subnet_id": "subnet-00c0584dbb2c23597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3b41fe80a0b7b5d",
            "route_table_id": "rtb-081651a19a9e4d46a",
            "subnet_id": "subnet-0fbcd55e4fb13d6da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce3dd11d63e8695a",
            "route_table_id": "rtb-081651a19a9e4d46a",
            "subnet_id": "subnet-0dd1f0139ec53de7d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06675dfcb86779307",
            "route_table_id": "rtb-081651a19a9e4d46a",
            "subnet_id": "subnet-0503db49deadd3ea0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-0d36b0b04851f4634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d36b0b04851f4634",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-0b32599fcca405b5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b32599fcca405b5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-00c0584dbb2c23597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c0584dbb2c23597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-0fbcd55e4fb13d6da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbcd55e4fb13d6da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-0dd1f0139ec53de7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd1f0139ec53de7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:subnet/subnet-0503db49deadd3ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0503db49deadd3ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088096345438",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00209688e0ce36c94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088096345438:vpc/vpc-00209688e0ce36c94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f7f82cdd49ab8f5",
            "default_route_table_id": "rtb-086140c64bc8664ce",
            "default_security_group_id": "sg-043ba25f74b8f8713",
            "dhcp_options_id": "dopt-0e2bf9d1a8a20a444",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00209688e0ce36c94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086140c64bc8664ce",
            "owner_id": "088096345438",
            "tags": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            },
            "tags_all": {
              "Department": "DevOps",
              "Name": "Vicky",
              "Owner": "Nati",
              "Temp": "True",
              "kubernetes.io/cluster/sonik-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}